# strongswan

./: .gitignore  MODIFICATIONS.md  README.md  configure.ac
src/libcharon/config/: ike_cfg.c  ike_cfg.h  peer_cfg.c  peer_cfg.h
src/libcharon/encoding/payloads/: cert_payload.c  cert_payload.h  certreq_payload.c  certreq_payload.h
src/libcharon/plugins/vici/: vici_authority.c  vici_config.c  vici_cred.c  vici_cred.h
src/libcharon/sa/: ike_sa.c  ike_sa.h
src/libstrongswan/: Makefile.am
src/libstrongswan/credentials/: auth_cfg.c  auth_cfg.h  builder.c  builder.h  cred_encoding.h  credential_factory.c  credential_factory.h  credential_manager.c  credential_manager.h  credential_set.h
src/libstrongswan/credentials/dids/: decentralized_identifier.c  decentralized_identifier.h
src/libstrongswan/credentials/sets/: auth_cfg_wrapper.c  callback_cred.c  cert_cache.c  mem_cred.c  mem_cred.h  ocsp_response_wrapper.c
src/libstrongswan/credentials/vcs/: verifiable_credential.c  verifiable_credential.h
src/libstrongswan/plugins/: plugin_feature.c  plugin_feature.h
src/libstrongswan/plugins/did_iota/: Makefile.am  did_iota.c  did_iota.h  did_iota_plugin.c  did_iota_plugin.h  identity.h
src/libstrongswan/plugins/pem/: pem_builder.c  pem_builder.h  pem_encoder.c  (+1 more)
src/libstrongswan/plugins/ssi/: Makefile.am  ssi_did.c  ssi_did.h  ssi_plugin.c  ssi_plugin.h  ssi_vc.h
src/libstrongswan/plugins/vc/: Makefile.am  did_iota.c  did_iota.h  identity.h  vc.c  vc.h  vc_plugin.c  vc_plugin.h
src/libstrongswan/plugins/vc_iota/: Makefile.am  did_iota.c  did_iota.h  identity.h  vc_iota.c  vc_iota.h  vc_iota_plugin.c  vc_iota_plugin.h
src/pki/: pki.c
src/pki/commands/: gen.c
src/swanctl/: swanctl.h
src/swanctl/commands/: load_conns.c  load_creds.c
(+6 files in other folders)
